2020-10-07         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* json.cpp (do_json_fromJSON): Change error messages to
	say json::from_json instead of json_fromJSON.
	(do_json_toJSON): Chagne error messages to say json::to_json
	instead of json_toJSON.
	* packaging/gawk-json.spec.in: Update BuildRequires to support gawk API
	major version 3.

2020-09-07         Arnold D. Robbins     <arnold@skeeve.com>

	* NEWS: Update for version 2.0.0.
	* README: Updated to mention that the extension now uses
	namespaces.
	* configure.ac (AC_INIT): Increase version to 2.0.0.
	* json.cpp (func_table): Change names of the functions.
	(dl_load): Use "json" namespace.
	* json_compat.awk: New file.
	* Makefile.am (EXTRA_DIST): Add json_compat.awk.

2018-02-28         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.2
	* configure.ac (AC_INIT): Bump version to 1.0.2.
	* gawkapi.h: Remove private copy of header file, since the version
	in gawk 4.2.1 now works with C++ code.
	* Makefile.am (EXTRA_DIST): Remove gawkapi.h
	* README: Update comment regarding gawkapi.h, since gawk 4.2.1 has
	been released.
	* packaging/gawk-json.spec.in (BuildRequires): We now require
	gawk-devel >= 4.2.1 to get a good version of gawkapi.h.

2018-02-28         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* packaging/gawk-json.spec.in: Add "BuildRequires: gcc-c++"

2017-12-06         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	* NEWS: Update for version 1.0.1.
	* configure.ac (AC_INIT): Bump version to 1.0.1.
	* packaging/gawk-json.spec.in: Improve comment, and stop attempting
	to install language translation files.
	* po/LINGUAS: Remove "fr", since we don't actually have a French
	translation. This file is now empty.
	* po/fr.po: Delete empty translation file.

2017-12-04         Andrew J. Schorr     <ajschorr@fedoraproject.org>

	Create a placeholder French message catalog so that the basic hooks
	are in place and the rpm will build properly.